# memos

./: .editorconfig
database/: postgresql_memo.md
db/: mongodb_golang_memo.md  mongodb_memo.md
embedded/: openocd_memo.md
embedded/android_memo/: NDK_native_dev_memo.md  android_memo.md  android_sample.md  emu_android_AVD_ADB_memo.md
embedded/arm_with_rust/: cortex_m_memo.md  cortex_m_rt_memo.md  elf2bin.md  setup.md  setup2.md  without_xargo_from_2018-04-17.md
embedded/dspic_memo/: ceedling_memo.md  ceedling_project.yml  dspic_install_memo.md  dspic_man.rst  dspic_memo.md  dspic_usage_memo.md  mdb_memo.md
embedded/embed/: embed-cli_memo.md  embed_memo.md  mbed_cli.md  memo_minicom.md  stlink_memo.md
embedded/fpga/: 00_icalur_verilog_memo.md  quartusII_memo.md  verilogHDL_memo.md  vivado_hls_memo.md  vivado_memo.md2  vivado_zybo_memo.md
embedded/mbed/: mbed_cli.md  mbed_homepage_memo.md  memo_lsusb.md
embedded/qemu_arm/: qemu_arm_memo.md
embedded/raspberrypi/: raspberrypi_memo.md
embedded/xilinx/: vivado_memo.md
envs/: anyenv_memo.md  archlinux_memo.md  asdf-memo.md  rbenv_memo.rst  rtx-memo.md  wsl-archlinux-memo.md  wsl_memo.md  x_clipboard_memo.md
envs/aws_memo/: 0_memo.md  apigw-request.json  aws-cdk-memo.md  awscli_memo.md  cargo-lambda-memo.md  cloudformation_memo.md  s3_memo.md  samcli_memo.md  (+2 more)
langs/: hugo_memo.md  markdown-memo.md
langs/c_memo/cmake-example/: CMakeLists.txt  build.sh
prj/: linear-memo.md
tools/: fcitx_mozc.md  gitui-memo.md  global_gtags_memo.md  i3wm_memo.md  ranger_memo.md  skk.md  tmux_memo.md  urxvt_memo.md
(+130 files in other folders)
